force-app/main/default/objects/Campaign/fields/CampoTestNow__c.field-meta.xml
<CustomField>
    <fullName>CampoTestNow__c</fullName>
    <formula>TEXT(NOW())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CampoTestNow</label>
    <type>Text</type>
</CustomField>