force-app/main/default/objects/Campaign/fields/EV_Acompanante__c.field-meta.xml
<CustomField>
    <fullName>EV_Acompanante__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check para dar la posiblidad de añadir acompañante en el formulario</inlineHelpText>
    <label>Posibilidad añadir acompañante</label>
    <type>Checkbox</type>
</CustomField>