force-app/main/default/objects/Campaign/fields/EV_AddressNumber__c.field-meta.xml
<CustomField>
    <fullName>EV_AddressNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dirección número</label>
    <length>255</length>
    <type>Text</type>
</CustomField>