force-app/main/default/objects/Campaign/fields/EV_Aforo_espacio_fisico__c.field-meta.xml
<CustomField>
    <fullName>EV_Aforo_espacio_fisico__c</fullName>
    <label>Aforo espacio físico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>