force-app/main/default/objects/Campaign/fields/EV_AforoFisicoCompleto__c.field-meta.xml
<CustomField>
    <fullName>EV_AforoFisicoCompleto__c</fullName>
    <formula>EV_Aforo_espacio_fisico__c &lt;= EV_inscritosFisicos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aforo Fisico Completo</label>
    <type>Checkbox</type>
</CustomField>