force-app/main/default/objects/Campaign/fields/EV_aforoFisicoCompletoC__c.field-meta.xml
<CustomField>
    <fullName>EV_aforoFisicoCompletoC__c</fullName>
    <description>Campo boolean para conocer si se ha sobrepasado el espacio del aforo fisico</description>
    <formula>EV_Aforo_espacio_fisico__c &lt;= EV_InscritosFisicosC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aforo Fisico Completo Evento</label>
    <type>Checkbox</type>
</CustomField>