force-app/main/default/objects/Campaign/fields/EV_API_Plantilla_Encuesta_Email_ES__c.field-meta.xml
<CustomField>
    <fullName>EV_API_Plantilla_Encuesta_Email_ES__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>API Plantilla Encuesta Email ES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>