force-app/main/default/objects/Campaign/fields/EV_AsistentesFisicosC__c.field-meta.xml
<CustomField>
    <fullName>EV_AsistentesFisicosC__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Contea el numero de asistentes con formato de asistencia Física y en estado Asistió</description>
    <label>Asistentes Físicos Evento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>