force-app/main/default/objects/Campaign/fields/EV_asistentesVirtuales__c.field-meta.xml
<CustomField>
    <fullName>EV_asistentesVirtuales__c</fullName>
    <label>Asistentes Virtuales</label>
    <summaryFilterItems>
        <field>CampaignMember.EV_FormatoDeAsistencias__c</field>
        <operation>equals</operation>
        <value>Virtual</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Asistió</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>