force-app/main/default/objects/Campaign/fields/EV_BotonGestor__c.field-meta.xml
<CustomField>
    <fullName>EV_BotonGestor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Botón para controlar si en Portal se va a mostrar el botón &apos;contacta con tu gestor&apos;</description>
    <inlineHelpText>Opcional. Sólo para eventos con clientes eapizados</inlineHelpText>
    <label>Botón &quot;contacta con tu gestor&quot;</label>
    <type>Checkbox</type>
</CustomField>