force-app/main/default/objects/Campaign/fields/EV_CaracteristicasDelEspacio__c.field-meta.xml
<CustomField>
    <fullName>EV_CaracteristicasDelEspacio__c</fullName>
    <description>Características del espacio necesarias para realizar el evento (En caso de ser Físico)</description>
    <inlineHelpText>Informar las características de la sala, oficina, edficio…</inlineHelpText>
    <label>Características del espacio</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>