force-app/main/default/objects/Campaign/fields/EV_Cartera__c.field-meta.xml
<CustomField>
    <fullName>EV_Cartera__c</fullName>
    <label>Cartera</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AgroBank</fullName>
            </value>
            <value>
                <fullName>BPE</fullName>
                <label>B.Premier</label>
            </value>
            <value>
                <fullName>BPR</fullName>
                <label>B.Privada</label>
            </value>
            <value>
                <fullName>BPA</fullName>
                <label>B.Retail</label>
            </value>
            <value>
                <fullName>EMP</fullName>
                <label>Empresas</label>
            </value>
            <value>
                <fullName>MIC</fullName>
                <label>Microempresas</label>
            </value>
            <value>
                <fullName>NEG</fullName>
                <label>Negocios</label>
            </value>
            <value>
                <fullName>WEALTH</fullName>
                <label>Wealth</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>