force-app/main/default/objects/Campaign/fields/EV_Categoria__c.field-meta.xml
<CustomField>
    <fullName>EV_Categoria__c</fullName>
    <inlineHelpText>En el portal de CaixaBank Talks, estas categorias se mostraran en el orden en que se seleccionen</inlineHelpText>
    <label>Categoría por temática</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>001</fullName>
                <label>Cultura y sociedad</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Desarrolla tu potencial</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Emprendimiento</label>
            </value>
            <value>
                <fullName>015</fullName>
                <label>Encuentros corporativos</label>
            </value>
            <value>
                <fullName>014</fullName>
                <label>Eventos culturales</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Gestión de las finanzas</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Gestión de las inversiones</label>
            </value>
            <value>
                <fullName>Gestión empresarial</fullName>
                <isActive>false</isActive>
                <label>Gestión empresarial</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>Impacto social</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>Innovación</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>Mundo empresarial</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>Protección y seguridad</label>
            </value>
            <value>
                <fullName>010</fullName>
                <label>Salud y bienestar</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>Sostenibilidad</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>Tecnología y mundo digital</label>
            </value>
            <value>
                <fullName>013</fullName>
                <label>Webinar Aula</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>