force-app/main/default/objects/Campaign/fields/EV_CentroAdminstrador__c.field-meta.xml
<CustomField>
    <fullName>EV_CentroAdminstrador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centro Adminstrador</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CC_CentroCaixaBank</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns (Centro Adminstrador)</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>