force-app/main/default/objects/Campaign/fields/EV_CentroOrganizador__c.field-meta.xml
<CustomField>
    <fullName>EV_CentroOrganizador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Centro que solicita el evento</description>
    <label>Centro del organizador</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CC_CentroCaixaBank</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Eventos organizados</relationshipLabel>
    <relationshipName>EventosOrganizados</relationshipName>
    <type>Lookup</type>
</CustomField>