force-app/main/default/objects/Campaign/fields/EV_CentroPromotor__c.field-meta.xml
<CustomField>
    <fullName>EV_CentroPromotor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Introducir código del centro del Promotor</inlineHelpText>
    <label>Centro Promotor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CC_CentroCaixaBank</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Catálogo de eventos</relationshipLabel>
    <relationshipName>EventosCatalogo</relationshipName>
    <type>Lookup</type>
</CustomField>