force-app/main/default/objects/Campaign/fields/EV_City__c.field-meta.xml
<CustomField>
    <fullName>EV_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ciudad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>