force-app/main/default/objects/Campaign/fields/EV_CodigoEvento__c.field-meta.xml
<CustomField>
    <fullName>EV_CodigoEvento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código evento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>