force-app/main/default/objects/Campaign/fields/EV_CodigoEventoPrivado__c.field-meta.xml
<CustomField>
    <fullName>EV_CodigoEventoPrivado__c</fullName>
    <description>Código de evento privado online</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Código evento privado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>