force-app/main/default/objects/Campaign/fields/EV_ConfirmacionRecordatorio__c.field-meta.xml
<CustomField>
    <fullName>EV_ConfirmacionRecordatorio__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Confirmación y recordatorio</label>
    <type>Checkbox</type>
</CustomField>