force-app/main/default/objects/Campaign/fields/EV_Coste__c.field-meta.xml
<CustomField>
    <fullName>EV_Coste__c</fullName>
    <description>Coste que conlleva la realización del evento</description>
    <inlineHelpText>Informar coste del proyecto según presupuesto de agencias.</inlineHelpText>
    <label>Coste</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>