force-app/main/default/objects/Campaign/fields/EV_CP__c.field-meta.xml
<CustomField>
    <fullName>EV_CP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código Postal</label>
    <length>5</length>
    <type>Text</type>
</CustomField>