force-app/main/default/objects/Campaign/fields/EV_CriterioPublicoObjetivo__c.field-meta.xml
<CustomField>
    <fullName>EV_CriterioPublicoObjetivo__c</fullName>
    <description>Criterio por el que se selecciona público objetivo</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Descripción informativa del público objetivo</inlineHelpText>
    <label>Criterio público objetivo</label>
    <type>TextArea</type>
</CustomField>