force-app/main/default/objects/Campaign/fields/EV_Description__c.field-meta.xml
<CustomField>
    <fullName>EV_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Limitación 255 caracteres</inlineHelpText>
    <label>Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>