force-app/main/default/objects/Campaign/fields/EV_DiaHora_evento__c.field-meta.xml
<CustomField>
    <fullName>EV_DiaHora_evento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Día y hora del evento</label>
    <type>DateTime</type>
</CustomField>