force-app/main/default/objects/Campaign/fields/EV_DiaHora_eventoAE__c.field-meta.xml
<CustomField>
    <fullName>EV_DiaHora_eventoAE__c</fullName>
    <description>Dia hora del evento 30 minutos antes</description>
    <formula>EV_DiaHora_evento__c-( 30/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dia hora del evento 30 minutos antes</inlineHelpText>
    <label>EV DiaHora eventoAE</label>
    <type>DateTime</type>
</CustomField>