force-app/main/default/objects/Campaign/fields/EV_DuracionOpcional__c.field-meta.xml
<CustomField>
    <fullName>EV_DuracionOpcional__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>No mostrar la duración del evento en las comunicaciones enviadas a cliente</inlineHelpText>
    <label>Ocultar duración</label>
    <type>Checkbox</type>
</CustomField>