force-app/main/default/objects/Campaign/fields/EV_Encuesta__c.field-meta.xml
<CustomField>
    <fullName>EV_Encuesta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Encuesta asociada</description>
    <inlineHelpText>Por defecto, seleccionar “CaixaBank Talks MVP”</inlineHelpText>
    <label>Encuesta asociada</label>
    <referenceTo>Survey</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>