force-app/main/default/objects/Campaign/fields/EV_Encuesta_requerida__c.field-meta.xml
<CustomField>
    <fullName>EV_Encuesta_requerida__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Desmarque la casilla si no requiere enviar encuesta al finalizar el evento.</inlineHelpText>
    <label>Encuesta requerida</label>
    <type>Checkbox</type>
</CustomField>