force-app/main/default/objects/Campaign/fields/EV_EncuestaEspectador__c.field-meta.xml
<CustomField>
    <fullName>EV_EncuestaEspectador__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Encuesta</label>
    <type>Checkbox</type>
</CustomField>