force-app/main/default/objects/Campaign/fields/EV_Espacio__c.field-meta.xml
<CustomField>
    <fullName>EV_Espacio__c</fullName>
    <label>Espacio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Particulares</fullName>
            </value>
            <value>
                <fullName>Empresa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>