force-app/main/default/objects/Campaign/fields/EV_EstadoVolumenPublicoObjetivo__c.field-meta.xml
<CustomField>
    <fullName>EV_EstadoVolumenPublicoObjetivo__c</fullName>
    <label>Estado Volumen Publico Objetivo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>No solicitado</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Solicitado</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Confirmado</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>Finalizado</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Publico objetivo recibido</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Error query</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>