force-app/main/default/objects/Campaign/fields/EV_EventoPrivado__c.field-meta.xml
<CustomField>
    <fullName>EV_EventoPrivado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean que marca si el evento va a mostrarse en el catálogo público o no.</description>
    <inlineHelpText>En caso de ser un evento privado, no se hará difusión del mismo en RRSS corporativas o de colaboradores de CaixaBank talks.</inlineHelpText>
    <label>Evento Privado</label>
    <type>Checkbox</type>
</CustomField>