force-app/main/default/objects/Campaign/fields/EV_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>EV_ExternalID__c</fullName>
    <description>Id externo securizado</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ID Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>