force-app/main/default/objects/Campaign/fields/EV_FechaHoraFin__c.field-meta.xml
<CustomField>
    <fullName>EV_FechaHoraFin__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha y Hora Fin</label>
    <type>DateTime</type>
</CustomField>