force-app/main/default/objects/Campaign/fields/EV_FechaVigencia__c.field-meta.xml
<CustomField>
    <fullName>EV_FechaVigencia__c</fullName>
    <description>Fecha de vigencia del evento en catálogo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de vigencia</label>
    <type>Date</type>
</CustomField>