force-app/main/default/objects/Campaign/fields/EV_FlujoPruebas__c.field-meta.xml
<CustomField>
    <fullName>EV_FlujoPruebas__c</fullName>
    <description>Campo picklist para el flujo de prueba de campaign.</description>
    <inlineHelpText>Estado de las pruebas que se realizan para la preparación del evento.</inlineHelpText>
    <label>Flujo de pruebas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Solicitud de pruebas</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Pruebas enviadas</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Pruebas validadas</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Pruebas no validas</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Pruebas fallidas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>