force-app/main/default/objects/Campaign/fields/EV_HoraFin__c.field-meta.xml
<CustomField>
    <fullName>EV_HoraFin__c</fullName>
    <description>Hora de finalización del evento</description>
    <label>Hora fin</label>
    <type>Time</type>
</CustomField>