force-app/main/default/objects/Campaign/fields/EV_HoraFinAC__c.field-meta.xml
<CustomField>
    <fullName>EV_HoraFinAC__c</fullName>
    <description>Hora finalización formateada a texto para AC</description>
    <formula>TEXT(EV_HoraFin__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hora fin Adobe Campaign</label>
    <type>Text</type>
</CustomField>