force-app/main/default/objects/Campaign/fields/EV_HoraInicio__c.field-meta.xml
<CustomField>
    <fullName>EV_HoraInicio__c</fullName>
    <description>Hora de inicio del evento</description>
    <label>Hora inicio</label>
    <type>Time</type>
</CustomField>