force-app/main/default/objects/Campaign/fields/EV_inscritosFisicos__c.field-meta.xml
<CustomField>
    <fullName>EV_inscritosFisicos__c</fullName>
    <label>Inscritos Físicos</label>
    <summaryFilterItems>
        <field>CampaignMember.EV_FormatoDeAsistencias__c</field>
        <operation>equals</operation>
        <value>Física</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>QR enviado, Registro confirmado, Asistió</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>