force-app/main/default/objects/Campaign/fields/EV_inscritosFisicosVirtualesC__c.field-meta.xml
<CustomField>
    <fullName>EV_inscritosFisicosVirtualesC__c</fullName>
    <description>Campo que cuenta el numero de inscritos físicos y inscritos virtuales</description>
    <formula>EV_InscritosFisicosC__c + EV_InscritosVirtualesC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Inscritos Fisicos Virtuales Evento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>