force-app/main/default/objects/Campaign/fields/EV_Invitacion__c.field-meta.xml
<CustomField>
    <fullName>EV_Invitacion__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Invitación</label>
    <type>Checkbox</type>
</CustomField>