force-app/main/default/objects/Campaign/fields/EV_isTest__c.field-meta.xml
<CustomField>
    <fullName>EV_isTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test</label>
    <type>Checkbox</type>
</CustomField>