force-app/main/default/objects/Campaign/fields/EV_LimiteRegistrosVirtuales__c.field-meta.xml
<CustomField>
    <fullName>EV_LimiteRegistrosVirtuales__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Campo que recoge el límite por el que un usuario va a poder acceder a un evento virtual.</description>
    <inlineHelpText>Número de intentos de acceso al evento por persona. Por defecto, 5</inlineHelpText>
    <label>Límite de registros virtuales</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>