force-app/main/default/objects/Campaign/fields/EV_LogoPie__c.field-meta.xml
<CustomField>
    <fullName>EV_LogoPie__c</fullName>
    <description>Se selecciona el valor del Logo 3</description>
    <label>Logo Pie</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>004</fullName>
                <label>AgroBank</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>Banca Premier</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>Banca Privada</label>
            </value>
            <value>
                <fullName>010</fullName>
                <label>CaixaBank</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>Dayone</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Empresas</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>HolaBank</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Negocios</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>Otros</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>SegurCaixa Adeslas</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>Vacío</label>
            </value>
            <value>
                <fullName>001</fullName>
                <default>true</default>
                <label>Xperience</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>