force-app/main/default/objects/Campaign/fields/EV_LugarDeCelebracion__c.field-meta.xml
<CustomField>
    <fullName>EV_LugarDeCelebracion__c</fullName>
    <description>Lugar de celebración del evento</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lugar de celebración</label>
    <length>255</length>
    <type>Text</type>
</CustomField>