force-app/main/default/objects/Campaign/fields/EV_MaxVolumePO__c.field-meta.xml
<CustomField>
    <fullName>EV_MaxVolumePO__c</fullName>
    <inlineHelpText>Volumen de público objetivo que necesitamos. Máximo 500.000</inlineHelpText>
    <label>Max Volume PO</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>