force-app/main/default/objects/Campaign/fields/EV_MotivoDeRechazo__c.field-meta.xml
<CustomField>
    <fullName>EV_MotivoDeRechazo__c</fullName>
    <description>Motivo por el que el evento se ha rechazado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Motivo de rechazo</label>
    <type>TextArea</type>
</CustomField>