force-app/main/default/objects/Campaign/fields/EV_NewArchitecture__c.field-meta.xml
<CustomField>
    <fullName>EV_NewArchitecture__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo utilizado para los webservices de portal para el objeto custom Campaign Member C</description>
    <inlineHelpText>Marcar en caso de utilizar la nueva arquitectura y antes de crear los miembros de campaña.</inlineHelpText>
    <label>Nueva Arquitectura</label>
    <type>Checkbox</type>
</CustomField>