force-app/main/default/objects/Campaign/fields/EV_Nivel_de_Dificultad__c.field-meta.xml
<CustomField>
    <fullName>EV_Nivel_de_Dificultad__c</fullName>
    <label>Nivel de Dificultad</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EV_ProgramaDeEventos__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Básico</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Intermedio</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Avanzado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>