force-app/main/default/objects/Campaign/fields/EV_NombrePonente__c.field-meta.xml
<CustomField>
    <fullName>EV_NombrePonente__c</fullName>
    <description>Nombre del ponente del evento</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nombre ponente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>