force-app/main/default/objects/Campaign/fields/EV_Notification__c.field-meta.xml
<CustomField>
    <fullName>EV_Notification__c</fullName>
    <label>Notificacion al espectador</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>003</fullName>
                <label>Cambio fecha y/u hora</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Incidencia retransmisión</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Volver a ver el evento</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>Cambio de dirección</label>
            </value>
            <value>
                <fullName>001</fullName>
                <label>Ninguna notificación</label>
            </value>
            <value>
                <fullName>Cambio fecha y hora</fullName>
                <isActive>false</isActive>
                <label>Cambio fecha y hora</label>
            </value>
            <value>
                <fullName>Cambio hora</fullName>
                <isActive>false</isActive>
                <label>Cambio hora</label>
            </value>
            <value>
                <fullName>Incidecia retransmisión</fullName>
                <isActive>false</isActive>
                <label>Incidecia retransmisión</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>