force-app/main/default/objects/Campaign/fields/EV_NumberOfContacts__c.field-meta.xml
<CustomField>
    <fullName>EV_NumberOfContacts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Campo que contabiliza los Contacts de un evento.</description>
    <inlineHelpText>Número de personas a las que se envía invitación centralizada.</inlineHelpText>
    <label>Clientes P. Físicas en campaña</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>