force-app/main/default/objects/Campaign/fields/EV_NumberOfLeads__c.field-meta.xml
<CustomField>
    <fullName>EV_NumberOfLeads__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Campo que contabiliza los Leads de un evento.</description>
    <inlineHelpText>Del total de inscritos, personas que no se han inscrito a través de invitación centralizada.</inlineHelpText>
    <label>No clientes en campaña</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>