force-app/main/default/objects/Campaign/fields/EV_NumeroDePlazas__c.field-meta.xml
<CustomField>
    <fullName>EV_NumeroDePlazas__c</fullName>
    <description>Número de plazas máximo del evento</description>
    <inlineHelpText>Máximo 5000. En caso de necesitar mayor capacidad, contactar con el equipo de eventos</inlineHelpText>
    <label>Número de plazas virtual</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>