force-app/main/default/objects/Campaign/fields/EV_ObservationsAC__c.field-meta.xml
<CustomField>
    <fullName>EV_ObservationsAC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Observaciones de Adobe campaign</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>