force-app/main/default/objects/Campaign/fields/EV_OrganizadorEvento__c.field-meta.xml
<CustomField>
    <fullName>EV_OrganizadorEvento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contacto que organiza el evento</description>
    <label>Organizador del evento</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Eventos organizados</relationshipLabel>
    <relationshipName>EventosOrganizados</relationshipName>
    <type>Lookup</type>
</CustomField>