force-app/main/default/objects/Campaign/fields/EV_Origen__c.field-meta.xml
<CustomField>
    <fullName>EV_Origen__c</fullName>
    <description>Campo origen para saber desde donde se realizó la creación y saltar validaciones</description>
    <label>Origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta masiva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>